# c-quiz

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  data.json  main.cpp  mariadb_sample.cpp  quiz  test.cpp
headers/: dbFuncs.h  requests.h  utils.h
implemetations/: dbFuncs.cpp  requests.cpp  utils.cpp
